[FoodStock3]fix some bug and improve design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">FoodStock</string>
     <string name="empty_list">List is empty</string>
+    <string name = "search_product_title">Search a Product and add a peremption date </string>
+    <string name = "bar_code">barcode </string>
+    <string name = "peremption_date">peremption date </string>
+    <string name="search_button">Search</string>
+    <string name="cancel">Cancel</string>
 </resources>
